tests/ui/cve_2020_35877/cve_2020_35877.stderr
error: it is unsound to dereference a pointer that is offset using an unchecked integer
  --> tests/ui/cve_2020_35877/cve_2020_35877.rs:49:13
   |
LL |     fn index(&self, idx: usize) -> &Self::Output {
   |                     --- offset passed in here
...
LL |             let mut p: *const T = self.data.lock().unwrap().ptr() as *const T;
   |                                   ------------------------------------------- pointer created here
...
LL |             &*p
   |             ^^^ dereferenced here
   |
   = help: check whether it's in bound before dereferencing

error: it is unsound to dereference a pointer that is offset using an unchecked integer
  --> tests/ui/cve_2020_35877/cve_2020_35877.rs:49:13
   |
LL |     fn index(&self, idx: usize) -> &Self::Output {
   |                     --- offset passed in here
...
LL |                 p = p.offset(1);
   |                 --------------- pointer created here
...
LL |             &*p
   |             ^^^ dereferenced here
   |
   = help: check whether it's in bound before dereferencing

error: it is an undefined behavior to offset a pointer using an unchecked integer
  --> tests/ui/cve_2020_35877/cve_2020_35877.rs:46:23
   |
LL |                 p = p.offset(1);
   |                     - ^^^^^^^^^ offset here
   |                     |
   |                     pointer created here
   |
   = help: check whether it's in bound before offsetting
   = note: See the safety section in https://doc.rust-lang.org/std/primitive.pointer.html#method.offset

error: aborting due to 3 previous errors

